Use semibold for headers and fix up spacing

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -9,7 +9,7 @@
 	font-style: normal;
 }
 
-[class*="icon-"] {
+i[class*="icon-"] {
 	font-family: 'icomoon';
 	display: inline-block;
 	speak: none;
@@ -87,6 +87,36 @@
        url('../../fonts/Open-Sans-regular/Open-Sans-regular.ttf') format('truetype'),
        url('../../fonts/Open-Sans-regular/Open-Sans-regular.svg#OpenSans') format('svg');
 }
+
+@font-face {
+  font-family: 'Open Sans';
+  font-weight: 600;
+  font-style: normal;
+  src: url('../../fonts/Open-Sans-600/Open-Sans-600.eot');
+  src: url('../../fonts/Open-Sans-600/Open-Sans-600.eot?#iefix') format('embedded-opentype'),
+       local('Open Sans Semibold'),
+       local('Open-Sans-600'),
+       url('../../fonts/Open-Sans-600/Open-Sans-600.woff2') format('woff2'),
+       url('../../fonts/Open-Sans-600/Open-Sans-600.woff') format('woff'),
+       url('../../fonts/Open-Sans-600/Open-Sans-600.ttf') format('truetype'),
+       url('../../fonts/Open-Sans-600/Open-Sans-600.svg#OpenSans') format('svg');
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  font-weight: 600;
+  font-style: italic;
+  src: url('../../fonts/Open-Sans-600italic/Open-Sans-600italic.eot');
+  src: url('../../fonts/Open-Sans-600italic/Open-Sans-600italic.eot?#iefix') format('embedded-opentype'),
+       local('Open Sans Semibold Italic'),
+       local('Open-Sans-600italic'),
+       url('../../fonts/Open-Sans-600italic/Open-Sans-600italic.woff2') format('woff2'),
+       url('../../fonts/Open-Sans-600italic/Open-Sans-600italic.woff') format('woff'),
+       url('../../fonts/Open-Sans-600italic/Open-Sans-600italic.ttf') format('truetype'),
+       url('../../fonts/Open-Sans-600italic/Open-Sans-600italic.svg#OpenSans') format('svg');
+}
+
+
 
 @font-face {
   font-family: 'Source Code Pro';
