--- a/scss/resume.scss
+++ b/scss/resume.scss
@@ -3,7 +3,8 @@
 $font-stack: "Open Sans", sans-serif;
 $font-size: 11pt;
 $body-weight: 300;
-$heading-weight: 400;
+$strong-weight: 400;
+$header-weight: 600;
 $monospace-font: "Source Code Pro", monospace;
 $background-color: #eee;
 $resume-color: #fff;
@@ -50,8 +51,12 @@ h3 {
 	margin: 0.75em 0;
 }
 
-h1, h2, h3, strong {
-	font-weight: $heading-weight;
+strong {
+	font-weight: $strong-weight;
+}
+
+h1, h2, h3 {
+	font-weight: $header-weight;
 }
 
 code {
@@ -105,6 +110,7 @@ code {
 
 	h1 {
 		font-size: 3em;
+		font-weight: $header-weight;
 		margin-bottom: 0.5rem;
 	}
 
@@ -156,6 +162,7 @@ code {
 	ul {
 		list-style-type: none;
 		padding-left: 8px;
+		margin-top: 0.75em;
 	}
 	> div {
 		border-bottom: 1px solid $line-color;
@@ -208,12 +215,23 @@ code {
 
 .project {
 	padding-bottom: 0.3em;
+
+	em {
+		font-style: normal;
+		font-weight: $header-weight;
+	}
 }
 
 #projects {
 	@include media("<desktop", "screen") {
 		border-bottom: 1px solid $line-color;
 	}
+
+	> div:first-child {
+		margin-bottom: 0.75em;
+	}
+
+	margin-bottom: 1em;
 }
 
 #experience {
@@ -224,8 +242,15 @@ code {
 
 	div > ul {
 		padding-left: 40px;
-		margin-bottom: 10px;
+		margin: 0.2em 0;
 	}
+
+	.row em {
+		font-style: normal;
+		font-weight: $header-weight;
+		margin-bottom: 0.25em;
+	}	
+
 	padding-bottom: 0.5em;
 }
 
